Server: Fixed 'Hidden Card Allocation' DELETE Endpoint So It No Longer Requires A Request Body
